fixes modal shift

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -49,7 +49,7 @@ body {
 }
 
 .no-scroll {
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 @media screen and (min-width: 768px) {
